# sign-language-recognition-mnist

./: README.md  config.py  main.py  model.py  notebook.ipynb  pyproject.toml  requirements.txt  train.py
models/: cnn_model_2.keras
