[project]
name = "sign-language-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.2",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "tensorflow[and-cuda]>=2.18.0",
]
